# HerosJourney_anonymous

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  steering_methods.md
examples/: 01_run_builtin_task.py  02_custom_task.py  03_custom_agent.py  04_methods.py  05_run_benchmark.py  README.md
experiments/: build_site_data.py
experiments/analysis/: aggregated_method_tests.json  aggregated_tests.json  compute_phase2_metrics.py  score_human_explanations.py  score_rule_hypotheses.py  visualization.py  viz_results.py
experiments/human_study/: annotation_set.json  annotation_tool.html  generate_rule_induction_set.py  interface.html  rule_induction_set.json  rule_induction_tool.html  sample_annotation_set.py  server.py
herosjourney/: __init__.py
herosjourney/core/: demo_generator.py  elements.py  generator.py  goal_tree.py  registry.py  task_file.py
herosjourney/core/distractors/: canonical_property_distractor.json
herosjourney/core/function_specs/: compositions.json  compositions.py  item_mappings.json  item_mappings.py  split_functions.json  splits.py
herosjourney/core/processes/: property_flat.json
herosjourney/core/rules/: RULE_FORMAT.md  additive.json  compositional.json  conditional.json  override.json  proc_add.json  proc_comp.json  proc_cond.json  proc_over.json
herosjourney/core/tasks/: __init__.py  additive.json  compositional.json  conditional.json  override.json  proc_add.json  proc_comp.json  proc_comp.py  proc_cond.json  proc_over.json
herosjourney/env/: env.py
herosjourney/eval/: __init__.py  judge.py  metrics.py  result.py  source_coverage.py
herosjourney/runner/: adventure_episode.py  adventure_pipeline.py  models.py  prompts.py  qa_episode.py  run_adventure_story.py  strategies.py  teacher.py
herosjourney/world_info/: actions.py
herosjourney/world_info/lexicons/: distractor_nonce_lexicon.json  distractor_semantic_lexicon.json  nonce_lexicon.json  semantic_lexicon.json
herosjourney/world_info/variants/additive/: v0_filled.json  v10_filled.json  v11_filled.json  v12_filled.json  v13_filled.json  v14_filled.json  v15_filled.json  (+13 more)
site/: README.md  data.js  index.html
tools/: process_editor.html
(+120 files in other folders)
